components/dialog.scss
@import '../elevation.scss';
@import '../config.scss';
@import '../containers/list.scss';


.dialog-trigger {
    display: none;

    + .dialog-container {

        pointer-events: none;
        position: fixed; top: 0; left: 0;
        width: 100%; height: 100%;
        opacity: 0;

        visibility: hidden;
        display: flex;
        align-items: center;
        justify-content: center;

        transition: opacity 0.7s cubic-bezier(0.23, 1, 0.32, 1) 0.4s;

        > .dialog-content {
            display: flex;
            max-width: 35em;
            width: 100%;
            //border: 1px solid black;
            @include list;
            opacity: 0;

            transform: scale(1.2);
            transition: transform 0s cubic-bezier(0.23, 1, 0.32, 1) 0.9s, opacity 0.7s cubic-bezier(0.23, 1, 0.32, 1) 0.2s;
        }
    }
    &:checked + .dialog-container {
        visibility: visible;
        pointer-events: auto;
        opacity: 1;
        transition: opacity 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0.2s;
        > .dialog-content{
            opacity: 1;
            transform: scale(1);
            transition: transform 1s cubic-bezier(0.23, 1, 0.32, 1) 0.2s, opacity 0.7s cubic-bezier(0.23, 1, 0.32, 1) 0.4s;
        }
    }
}

